--- a/src/main/resources/AjouterVoiture.fxml
+++ b/src/main/resources/AjouterVoiture.fxml
@@ -75,6 +75,8 @@
                 <Font name="System Bold" size="20.0" />
             </font>
         </Label>
+        <Button layoutX="840.0" layoutY="41.0" onAction="#retournerPagePrecedente" opacity="0.0" prefHeight="54.0" prefWidth="178.0" text="EXIT" />
+
 
 
     </children>
